<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/txt_message"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:text="@string/choose_the_language"/>

    <RadioGroup
        android:id="@+id/r_group_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_message">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_english"
            android:checked="true"
            style="@style/TextAppearance.AppCompat.Large"
            android:text="@string/english"/>

        <RadioButton
            android:layout_width="wrap_content"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_height="wrap_content"
            android:id="@+id/txt_french"
            android:text="@string/french"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/r_group_language" />


</androidx.constraintlayout.widget.ConstraintLayout>